# ids

./: .gitignore  Cargo.toml  Makefile.toml  README.md  Shuttle.toml
.sqlx/: query-9768a56eba41d32152e5507fc69828d2c602f19935d5ff35819f154f10aeefcb.json
backend/auth/: Cargo.toml
backend/auth/src/: client.rs  error.rs  lib.rs  types.rs
backend/database/: Cargo.toml
backend/database/migrations/: 20240801051413_add_update_timestamp_function.down.sql  20240801051413_add_update_timestamp_function.up.sql  20240801051826_add_users_table.up.sql  20240802014704_add_users_table.down.sql  20240802014704_add_users_table.up.sql
backend/database/src/: lib.rs
backend/database/src/repository/: users.rs
backend/server/: Cargo.toml
backend/server/src/: error.rs  lib.rs  main.rs  router.rs
backend/server/src/middleware/: authorization.rs
backend/server/src/router/: api.rs  static_file.rs
frontend/: Makefile.toml  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/api/: dummy.ts
frontend/src/auth/: auth0-provider-with-navigate.tsx
frontend/src/components/:  LogoutButton.tsx  Counter.tsx  InfoList.tsx  SeachBox.tsx  UsersListItem.tsx
frontend/src/components/auth/: Auth0NavButtons.tsx  AuthenticationGuard.tsx  LoginButton.tsx  SignupButton.tsx
frontend/src/components/common/: BackButton.tsx  BackButtonArrow.tsx  ForwardButtonArrow.tsx  Header.tsx  PageLoader.tsx  SideBar.tsx  TreeClassMember.tsx  TreeList.tsx
frontend/src/pages/: Callback.tsx  Home.tsx  Layout.tsx  NotFound.tsx  Root.tsx  Test1.tsx  User.tsx  UsersList.tsx
frontend/src/recoil/: atoms.ts  selectors.ts
frontend/src/routes/: routes.tsx
frontend/src/styles/: input.css  output.css
frontend/src/types/: classTypes.ts  userTypes.ts
