[package]
name = "ids_auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "9.3.0"
serde = "1.0.204"
uuid = "1.10.0"
chrono  = "0.4.38"
thiserror = "1.0.63"