[package]
name = "ids_auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "9.3.0"
serde = {version = "1.0.0", features = ["derive"]}
uuid = {version = "1.8.0", features = ["v4", "serde"]}
chrono  = "0.4.37"
reqwest = { version = "0.12.7", features = ["json"] }
tokio = {version = "1.39.3", features = ["full"]}
dotenvy = "0.15.7"
envy = "0.4.2"
url = "2.5.2"
thiserror = "1.0.63"