[package]
name = "ids_database"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "macros", "migrate", "uuid", "chrono"] }
thiserror = "1.0.63"
derive-new = "0.6.0"
uuid = "1.10.0"
fake = "2.9.2"
argon2 = "0.5.3"
password-hash = "0.5.0"