[package]
name = "ids_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
shuttle-shared-db = { version = "0.47.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "macros", "migrate", "uuid", "chrono"] }
tokio = "1.28.2"
tower-http = {version = "0.5.2", features = ["fs", "cors"]}
thiserror = "1.0.63"

ids_auth = { path = "../auth/" }
ids_database = { path = "../database/" }